# SDL2-Boilerplate

./: .gitignore  CMakeLists.txt  readme.md
assets/: uPref.ini
include/: audio.h  constants.h  input.h  preferences.h  rendering.h  utility.h
src/: main.cpp  preferences.cpp  rendering.cpp  utility.cpp
src/audio/: initAudio.cpp  loadWav.cpp
src/input/: initKeyBinds.cpp  pollEvents.cpp  scancodes.cpp
